@@ -2,6 +2,12 @@
 CHANGE LOG
 =========================================================================
 
+2007-11-11  Warren L. DeLano <warren@delsci.com>
+
+	* retain_order is now object-specific
+
+	* restricted geom rebuilds after mask
+	
 2007-10-31  Warren L. DeLano <warren@delsci.com>
 
 	* added a couple of new CGO examples
